--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -2,8 +2,8 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
   
     {% block htmltitle %}
       <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
@@ -16,6 +16,8 @@
 
     {# CSS #}
 
+	<link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css" />
+	
     {% for cssfile in css_files %}
       <link rel="stylesheet" href="{{ pathto(cssfile, 1) }}" type="text/css" />
     {% endfor %}
@@ -25,6 +27,8 @@
     {% endfor %}
   </head>
   <body>
+    {% include 'header.html' %}
+  
     {% block body %}{% endblock %}
   </body>
 </html>
