Update Monospark logos

--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -11,6 +11,7 @@
 
     {# FAVICON #}
     <link rel="icon" href="/_static/favicon.png"/>
+    <link rel="apple-touch-icon" href="/_static/apple-touch-icon.png"/>
 
     {# CSS #}
 
