Add WIP to footer

--- a/monospark_sphinx_theme/footer.html
+++ b/monospark_sphinx_theme/footer.html
@@ -1,3 +1,3 @@
 <footer class="text-center">
-  <p>Designed by <a href="https://github.com/milchshakee">Milchshakee</a>. The source code of this Sphinx Theme is available at <a href="https://github.com/monospark/monospark_sphinx_theme">GitHub</a></p>
+  <p>WIP. The source code of this Sphinx Theme is available at <a href="https://github.com/monospark/monospark_sphinx_theme">GitHub</a></p>
 </footer>
