--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -10,8 +10,8 @@
     {% endblock %}
 
     {# FAVICON #}
-    <link rel="icon" href="/_static/favicon.png"/>
-    <link rel="apple-touch-icon" href="/_static/apple-touch-icon.png"/>
+    <link rel="icon" href="_static/favicon.png"/>
+    <link rel="apple-touch-icon" href="_static/apple-touch-icon.png"/>
 
     {# CSS #}
 
@@ -25,7 +25,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
       
-    <script src="/_static/offset-anchors.js"></script>
+    <script src="_static/offset-anchors.js"></script>
   </head>
   <body>
     {% include 'header.html' %}
