--- a/monospark_sphinx_theme/header.html
+++ b/monospark_sphinx_theme/header.html
@@ -10,9 +10,9 @@
       <a href="/">
 
         <!-- This element is hidden and is only used to pre-load the shining logo variation.-->
-        <img id="preload-shining-logo" src="_static/monospark-docs-logo-big-shining.png" />
+        <img id="preload-shining-logo" src="{{ pathto('_static/monospark-docs-logo-big-shining.png', 1) }}" />
 
-        <img class="navbar-brand" src="_static/monospark-docs-logo-big.png" onmouseover="this.src='_static/monospark-docs-logo-big-shining.png';" onmouseout="this.src='_static/monospark-docs-logo-big.png';" />
+        <img class="navbar-brand" src="{{ pathto('_static/monospark-docs-logo-big.png', 1) }}" onmouseover="this.src='{{ pathto('_static/monospark-docs-logo-big-shining.png', 1) }}';" onmouseout="this.src='{{ pathto('_static/monospark-docs-logo-big.png', 1) }}';" />
       </a>
     </div>
     <div class="navbar-collapse collapse navbar-right">
