Make the toc adapt to different window sizes

--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -22,7 +22,7 @@
     <script src="/_static/js/jquery-1.11.3.min.js"></script>
     <script src="/_static/js/bootstrap.min.js"></script>
     <script src="/_static/js/offset-anchors.js"></script>
-    <script src="/_static/js/scroll-toc.js"></script>
+    <script src="/_static/js/toc.js"></script>
   </head>
   <body>
     {% include 'header.html' %}
