--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -22,6 +22,7 @@
     <script src="/_static/js/jquery-1.11.3.min.js"></script>
     <script src="/_static/js/bootstrap.min.js"></script>
     <script src="/_static/js/offset-anchors.js"></script>
+    <script src="/_static/js/hr-headlines.js"></script>
     <script src="/_static/js/toc.js"></script>
   </head>
   <body>
