Fix some toc style issues

--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -32,7 +32,7 @@
         <div id="aside-wrapper" class="col-md-3 col-md-push-9">
           <aside>
             <div id="inner-aside-wrapper">
-              <h3><a href="{{ pathto(master_doc) }}">{{ project }}</a></h3>
+              <h3><a href="{{ pathto(master_doc) }}">Table of contents</a></h3>
               <hr />
               {{ toctree(maxdepth=3, collapse=False, includehidden=True) }}
             </div>
