Enable some scripts for testing

--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -20,10 +20,9 @@
     {# Scripts #}   
     <script src="/_static/js/jquery-1.11.3.min.js"></script>
     <script src="/_static/js/bootstrap.min.js"></script>
-    <!-- 
     <script src="/_static/js/hr-headlines.js"></script>
     <script src="/_static/js/toc.js"></script>
-    <script src="/_static/js/offset-anchors.js"></script>
+       <!-- <script src="/_static/js/offset-anchors.js"></script>
     -->
   </head>
   <body>
