Fix attempt for 404 errors

--- a/monospark_sphinx_theme/layout.html
+++ b/monospark_sphinx_theme/layout.html
@@ -22,8 +22,7 @@
     <script src="/_static/js/bootstrap.min.js"></script>
     <script src="/_static/js/hr-headlines.js"></script>
     <script src="/_static/js/toc.js"></script>
-       <!-- <script src="/_static/js/offset-anchors.js"></script>
-    -->
+    <script src="/_static/js/offset-anchors.js"></script>
   </head>
   <body>
     {% include 'header.html' %}
